--- a/README
+++ b/README
@@ -6,3 +6,14 @@ zenity (https://wiki.gnome.org/Projects/Zenity)
 
 Note- For this to work you need to put your user in the
 sudoers file (see "man visudo").
+
+## Installation
+
+Install it as:
+
+sudo make install
+
+For Slackware users check out <a href="http://slackbuilds.org/repository/14.1/system/xfsudo/">xfsudo</a> at <a href="http://slackbuilds.org/">slackbuilds.org</a>
+
+For Arch Linux users check out <a href="https://aur.archlinux.org/packages/xfsudo/">xfsudo</a> in the <a href="https://aur.archlinux.org/">Arch User Repository</a>
+
