--- a/man/xfsudo.8
+++ b/man/xfsudo.8
@@ -7,13 +7,16 @@
 xfsudo \- run graphical applications with root priviliges using sudo.
 
 .SH SYNOPSIS
+.nf
 xfsudo [program]
+xfsu [program]
+.fn
 
 .SH DESCRIPTION
 xfsudo runs graphical applications with root priviliges using sudo.
 Zenity is used to display the dialog boxes.
 
-By default it runs in the sudo mode, ie, run apps with root priviliges, 
+By default it runs in sudo mode, ie, run programs with root priviliges,
 but with user's environment variables.
 
 To run instead with root's environment variables, it can be called as
@@ -26,8 +29,9 @@ Only the program to be executed and its options are specified.
 .SH EXAMPLES
 .nf
 xfsudo thunar
-xfsudo thunar /etc  # opens the /etc directory in thunar with root priviliges
-xfsu thunar  # run specified program with root's environment variables
+xfsudo thunar /etc	# opens the /etc directory in thunar with root priviliges
+xfsu thunar		# runs thunar with root's environment variables
+
 .fn
 .SH SEE ALSO
 sudo(8), visudo(8)
