--- a/man/xfsudo.8
+++ b/man/xfsudo.8
@@ -16,7 +16,7 @@ xfsu [program]
 xfsudo runs graphical applications with root priviliges using sudo.
 Zenity is used to display the dialog boxes.
 
-By default it runs in sudo mode, ie, run programs with root priviliges,
+By default it runs in sudo mode, ie, runs program with root priviliges,
 but with user's environment variables.
 
 To run instead with root's environment variables, it can be called as
