--- a/man/xfsudo.8
+++ b/man/xfsudo.8
@@ -4,7 +4,7 @@
 .TH man 8 "10 May 2015" "0.6" "xfsudo man page"
 
 .SH NAME
-xfsudo \- run graphical applications with root priviliges using sudo.
+xfsudo \- run graphical applications with root privileges using sudo.
 
 .SH SYNOPSIS
 .nf
